crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__props_all_of.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"allOf\":[{\"properties\":{\"a\":{}}}],\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.iter()
                    .all(|(__key, __value)| {
                        let key_str = __key.as_str();
                        if matches!(key_str, "a") { true } else { false }
                    })
            }
            _ => false,
        }
