crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__props_any_of.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"anyOf\":[{\"properties\":{\"a\":{}},\"required\":[\"a\"]},{\"properties\":{\"b\":{}},\"required\":[\"b\"]}],\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
((match instance {
            serde_json::Value::Object(obj) => obj.contains_key("a"),
            _ => true,
        }
            || match instance {
                serde_json::Value::Object(obj) => obj.contains_key("b"),
                _ => true,
            }))
            && (match instance {
                serde_json::Value::Object(obj) => {
                    obj.iter()
                        .all(|(__key, __value)| {
                            let key_str = __key.as_str();
                            if ((|instance: &serde_json::Value| validate_ref_0(
                                instance,
                            ))(instance) && (matches!(key_str, "a"))
                                || (|instance: &serde_json::Value| validate_ref_1(
                                    instance,
                                ))(instance) && (matches!(key_str, "b")))
                            {
                                true
                            } else {
                                false
                            }
                        })
                }
                _ => false,
            })
