crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__props_guard_oneof_not_if.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"oneOf\":[{\"const\":1},{\"not\":{\"const\":2}},{\"if\":{\"type\":\"string\"},\"then\":{}}],\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
({
            let mut matched = {
                static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                { serde_json::from_str("1").expect("Failed to parse const number") });
                match instance {
                    serde_json::Value::Number(n) => {
                        jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                    }
                    _ => false,
                }
            };
            (if !({
                static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                { serde_json::from_str("2").expect("Failed to parse const number") });
                match instance {
                    serde_json::Value::Number(n) => {
                        jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                    }
                    _ => false,
                }
            }) {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }
                && if true {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }) && matched
        })
            && (match instance {
                serde_json::Value::Object(obj) => {
                    obj.iter()
                        .all(|(__key, __value)| {
                            let key_str = __key.as_str();
                            if {
                                let mut __one_of_matches = 0usize;
                                let mut __one_of_evaluates = false;
                                if (|instance: &serde_json::Value| {
                                    static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                    {
                                        serde_json::from_str("1")
                                            .expect("Failed to parse const number")
                                    });
                                    match instance {
                                        serde_json::Value::Number(n) => {
                                            jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                        }
                                        _ => false,
                                    }
                                })(instance) {
                                    __one_of_matches += 1;
                                    __one_of_evaluates = __one_of_evaluates || (false);
                                }
                                if (|instance: &serde_json::Value| validate_ref_0(
                                    instance,
                                ))(instance) {
                                    __one_of_matches += 1;
                                    __one_of_evaluates = __one_of_evaluates || (false);
                                }
                                if (|instance: &serde_json::Value| validate_ref_1(
                                    instance,
                                ))(instance) {
                                    __one_of_matches += 1;
                                    __one_of_evaluates = __one_of_evaluates
                                        || (if (|instance: &serde_json::Value| {
                                            instance.is_string()
                                        })(instance) {
                                            (false) || (false)
                                        } else {
                                            false
                                        });
                                }
                                __one_of_matches == 1 && __one_of_evaluates
                            } {
                                true
                            } else {
                                false
                            }
                        })
                }
                _ => false,
            })
